# llm-evaluations

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.staging.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
notebooks/: neural_network_from_scratch.ipynb  transformer_evaluation.ipynb
